--- a/Luminex-Back/docker-compose.yml
+++ b/Luminex-Back/docker-compose.yml
@@ -4,8 +4,8 @@ services:
   web:
     build: .
     container_name: django
-    command: python manage.py runserver
+    command: python manage.py runserver 0.0.0.0:8000
     ports:
-      - 8000:8000
+      - "8000:8000"
     volumes:
-      - ./:/app
+      - .:/app
