--- a/Luminex-Front-2/package.json
+++ b/Luminex-Front-2/package.json
@@ -8,10 +8,11 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "axios": "^1.5.0",
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
     "popper.js": "^1.16.1",
     "vue-router": "^4.0.3",
     "vuex": "^4.1.0"
