--- a/Luminex-Front-2/package.json
+++ b/Luminex-Front-2/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "cheerio": "^1.0.0-rc.12",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "popper.js": "^1.16.1",
