--- a/Luminex-Front-2/package.json
+++ b/Luminex-Front-2/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "popper.js": "^1.16.1",
+    "vue": "^3.2.36",
     "vue-router": "^4.0.3",
     "vue-template-compiler": "^2.7.15",
     "vuex": "^4.1.0"
