--- a/Luminex-Front-2/package.json
+++ b/Luminex-Front-2/package.json
@@ -14,7 +14,9 @@
     "cheerio": "^1.0.0-rc.12",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
+    "material-design-icons-iconfont": "^6.7.0",
     "popper.js": "^1.16.1",
+    "primevue": "^3.44.0",
     "vue": "^3.2.36",
     "vue-router": "^4.0.3",
     "vue-template-compiler": "^2.7.15",
