--- a/Luminex-Front-2/package.json
+++ b/Luminex-Front-2/package.json
@@ -17,6 +17,7 @@
     "material-design-icons-iconfont": "^6.7.0",
     "popper.js": "^1.16.1",
     "primevue": "^3.44.0",
+    "usemodal-vue3": "^0.3.7",
     "vue": "^3.2.36",
     "vue-router": "^4.0.3",
     "vue-template-compiler": "^2.7.15",
