--- a/Luminex-Front-2/package.json
+++ b/Luminex-Front-2/package.json
@@ -11,9 +11,12 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "chart.js": "^4.4.1",
     "cheerio": "^1.0.0-rc.12",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
+    "date-fns": "^3.0.1",
+    "date-fns-tz": "^2.0.0",
     "material-design-icons-iconfont": "^6.7.0",
     "popper.js": "^1.16.1",
     "primevue": "^3.44.0",
